# EvidenceFlow

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package.json  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  bootstrap.py  cli.py  errors.py  main.py  ports.py  runner.py
app/ai/: __init__.py  config.py  fakes.py  structured.py  usage.py
app/api/: dependencies.py  progress.py  schemas.py
app/config/: __init__.py  settings.py
app/documents/: __init__.py  pymupdf.py
app/domain/: __init__.py  base.py  documents.py  extractions.py  findings.py  models.py  policy.py  reports.py  reviews.py
app/evaluation/: __init__.py  generator.py  metrics.py  runner.py  scenarios.py  workflow_adapter.py
app/graph/: __init__.py  state.py  workflow.py
app/observability/: __init__.py  tracing.py
app/persistence/: __init__.py  artifacts.py  repository.py
app/preparation/: __init__.py  models.py  ollama.py  providers.py  runtime.py  service.py
app/retrieval/: __init__.py  atomic.py  chunking.py  index.py  manifest.py  sqlite_vec.py
app/review/: __init__.py  config.py  decisions.py  items.py  normalization.py  reporting.py  validation.py
config/: models.yaml  review_rules.yaml
docs/: architecture.md  evaluation.md  local-development.md
eval/queries/: policy_relevance.json
eval/results/: evaluation-results.json  evaluation-results.md
frontend/: index.html
frontend/css/: app.css
frontend/js/: api.js  app.js  decision-data.js  evidence-data.js  progress-data.js  reviewer-guide.js  router.js  state.js  upload-selection.js
policies/: company-identification-policy.md  company-onboarding-requirements.md  data-quality-guidelines.md  document-evidence-policy.md  financial-document-requirements.md  manual-review-policy.md
tests/: __init__.py
tests/e2e/: test_export_flow.py
tests/frontend/: evidence-and-upload.test.js  manual-decisions.test.js  processing-progress.test.js  reviewer-guide.test.js
tests/integration/: test_ollama_workflow.py  test_persistence.py  test_review_api.py  test_review_graph.py  test_runner.py
tests/unit/: test_ai_capabilities.py  test_ai_ollama.py  test_bootstrap.py  (+16 more)
(+48 files in other folders)
