[build-system]
requires = ["hatchling==1.29.0"]
build-backend = "hatchling.build"

[project]
name = "evidenceflow"
version = "0.1.0"
description = "Stateful local-first document review with deterministic validation and durable human review."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "AGPL-3.0-only" }
authors = [{ name = "Furkan" }]
dependencies = [
  "aiosqlite==0.22.1",
  "fastapi==0.139.0",
  "langchain==1.3.4",
  "langchain-core==1.4.9",
  "langchain-ollama==1.1.0",
  "langgraph==1.2.9",
  "langgraph-checkpoint-sqlite==3.1.0",
  "mlflow[langchain]==3.14.0",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.2",
  "pymupdf==1.28.0",
  "python-multipart==0.0.32",
  "pyyaml==6.0.3",
  "reportlab==5.0.0",
  "sqlite-vec==0.1.9",
  "typer==0.26.8",
  "uvicorn[standard]==0.51.0",
]

[project.scripts]
evidenceflow = "app.cli:app"

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "mypy==2.3.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.21",
  "types-pyyaml==6.0.12.20250915",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --strict-config"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
  "e2e: end-to-end workflow tests",
  "ollama: requires a running Ollama server and configured models",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["eval/bundles"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "ASYNC", "RUF"]
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["eval/bundles"]
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = ["sqlite_vec.*", "mlflow.*", "reportlab.*"]
ignore_missing_imports = true
